[tool.poetry]
name = "expansion"
version = "0.1.0"
description = "Environment for Sheepdog Stress Test Notebook"


[tool.poetry.dependencies]
python = ">=3.9, <4"
requests = "*"
indexclient = "^2.3.0"
drsclient = ">=0.3.0"
aiohttp = "*"
backoff = "*"
cdislogging = "^1.1.0"
click = "*"
jsonschema = "*"
# FIXME updating to >=0.6.0 breaks a few tests
dataclasses-json = "<=0.5.9"
pypfb = ">=0.5.30"
tqdm = "^4.61.2"
humanfriendly ="*"
python-dateutil = "*"
aiofiles = "^0.8.0"
pandas = ">=1.4.2"
urllib3 = ">2.0.0"
httpx = "*"
xmltodict = "^0.13.0"
pyyaml = ">=6.0.1"
gen3users = "*"

# A list of all of the optional dependencies, some of which are included in the
# below `extras`. They can be opted into by apps.
fhirclient = { version = "*", optional = true }
gen3 = "^4.26.1"
ipykernel = "^6.29.5"
scipy = "1.13.1"
matplotlib = "3.9.4"
seaborn = "^0.13.2"

[tool.poetry.extras]
fhir = ["fhirclient"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.0.0"
pytest-cov = "*"
requests-mock = "*"
cdisutilstest = { git = "https://github.com/uc-cdis/cdisutils-test.git", tag = "1.0.0" }
indexd = { git = "https://github.com/uc-cdis/indexd.git", tag = "5.0.4" }


[tool.poetry.plugins."gen3.plugins"]

[build-system]
requires = ["poetry>=1.4.1"]
build-backend = "poetry.masonry.api"

